--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "description": "Some module...",
   "dependencies": {
-    "lowercase-backbone": "~0.2.5"
+    "lowercase-backbone": "~0.2.5",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "requirejs": "*",
