--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,17 @@
 {
-  "name": "archetypo-router",
-  "main": "built/archetypo-router.js",
-  "version": "0.0.0",
-  "description": "Some module...",
-  "dependencies": {
-    "lowercase-backbone": "~0.2.5",
-    "lodash": "~2.4.1"
-  },
-  "devDependencies": {
-    "requirejs": "*",
-    "requirejs-text": "*",
-    "underscore": "*",
-    "jquery": "*",
-    "qunit": "*"
-  }
+	"name": "reversible-router",
+	"main": "built/reversible-router.js",
+	"version": "0.0.0",
+	"description": "Some module...",
+	"dependencies": {
+		"lowercase-backbone": "~0.2.5",
+		"lodash": "~2.4.1"
+	},
+	"devDependencies": {
+		"requirejs": "*",
+		"requirejs-text": "*",
+		"underscore": "*",
+		"jquery": "*",
+		"qunit": "*"
+	}
 }
